# presentation-of-mathematical-optimization

./: .gitignore  Dockerfile  Makefile  PIPELINE.md  README.md  dvc.yaml  memo.md  params.yaml  pyproject.toml
data/interim/: .gitignore
data/processed/: .gitignore
data/raw/: scenario-prompt.md  style.css
src/: generate_images.py  generate_prompt.py  generate_scenario.py  md_to_pptx.py  meta_prompt.md  prompt.md  style.css
