[tool.poetry]
name = "presentation-of-mathematical-optimization"
version = "0.1.0"
description = ""
authors = ["u-masao <4973920+u-masao@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.12"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.21"
mlflow = "^2.15.1"
markdown-to-json = "^2.1.1"
python-pptx = "^1.0.2"
beautifulsoup4 = "^4.12.3"
openai = "^1.40.6"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.1.1"
black = "^24.8.0"
dvc = "^3.53.1"
mdformat-myst = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
